# cpumodel

./: .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  new_cpu.md
.github/workflows/: publish.yml  test.yml
cpumodel/: amd.py  cpumodel.py  intel.py
