[tool.poetry]
name = "cpumodel"
version = "0.1.0"
description = "Get info about your CPU"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-cpuinfo = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpumodel = 'cpumodel.cpumodel:main'
